build: update cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,10 @@ set(CMAKE_CXX_STANDARD 20)
 
 set(SOURCES
     main.cpp
-    src/Error/errorHandler.cpp
-    src/Stream/fileStream.cpp
-    src/Scanner/Scanner.cpp
-    src/Token/token.cpp
+    src/Error/errorHandler.hpp
+    src/Stream/filestream.hpp
+    src/Scanner/Scanner.hpp
+    src/Token/token.hpp
 )
 
 
